--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,9 @@ default: &default
 
 development:
   <<: *default
-  database: rails_admin_template_development
+  database: rails_admin_template
+  username: root
+  password: root
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
