--- a/config/database.yml
+++ b/config/database.yml
@@ -55,3 +55,4 @@ production:
   database: manage_blog
   username: root
   password: <%= ENV['MANAGE_BLOG_DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
